--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,22 @@ plugins {
 group 'org.example'
 version '1.0-SNAPSHOT'
 
+def junitVersion = "5.8.1",
+    restAssuredVersion = "4.5.1",
+    assertjVersion = "3.19.0"
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation (
+            "org.junit.jupiter:junit-jupiter-api:$junitVersion",
+            "io.rest-assured:rest-assured:$restAssuredVersion",
+            "io.rest-assured:json-schema-validator:$restAssuredVersion",
+            "org.assertj:assertj-core:$assertjVersion"
+    )
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
 
 test {
